added parentScope to functions

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>Esprima</title>
+	<title>js2mse</title>
 
 	<script src="jquery-1.9.1.js"></script>
 	<script src="esprima.js"></script>
