added "use strict" recognition

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
 	<div class="inline">
 		<textarea id="input">
+"use strict";
 var console = console || {};
 
 var Shape = function Shape(x,y){
@@ -53,6 +54,7 @@ var Shape = function Shape(x,y){
 }
 
 var gX = function getX(){
+   'use strict';
    return 3;
 };
 function aFunction(x,y){
