--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 	<script type="text/javascript" src="FAMIX.js"></script>
 	<script type="text/javascript" src="ASTVisitor.js"></script>
 	<script type="text/javascript" src="DuplicatePropertyVisitor.js"></script>
+	<script type="text/javascript" src="DuplicateParameterVisitor.js"></script>
+	<script type="text/javascript" src="KeywordsVisitor.js"></script>
+	<script type="text/javascript" src="WithVisitor.js"></script>
 	<script type="text/javascript" src="OctalSyntaxVisitor.js"></script>
 	<script type="text/javascript" src="ScopeVisitor.js"></script>
 	<script type="text/javascript" src="StrictVisitor.js"></script>
@@ -160,8 +163,19 @@ var f = new Function("arguments", "'use strict'; return 17;");
 
 			// var strictVisitor = new StrictVisitor();
 			// accept(t,strictVisitor);
+
 			var dupPropertyVisitor = new DuplicatePropertyVisitor();
 			accept(t,dupPropertyVisitor);
+
+			var dupParameterVisitor = new DuplicateParameterVisitor();
+			accept(t,dupParameterVisitor);
+
+			var withVisitor = new WithVisitor();
+			accept(t,withVisitor);
+
+			var keywordsVisitor = new KeywordsVisitor();
+			accept(t,keywordsVisitor);
+
 			var octalVisitor = new OctalSyntaxVisitor();
 			accept(t,octalVisitor);
 
